Setting up the api to validate and post a new Room.
