# service/src/main/java/br/com/sw2you/realmeet/controller/RoomController.java
@@ -3,6 +3,7 @@ package br.com.sw2you.realmeet.controller;
 import static java.util.concurrent.CompletableFuture.supplyAsync;
 
 import br.com.sw2you.realmeet.api.facade.RoomsApi;
+import br.com.sw2you.realmeet.api.model.CreateRoomDTO;
 import br.com.sw2you.realmeet.api.model.RoomDTO;
 import br.com.sw2you.realmeet.service.RoomService;
 import br.com.sw2you.realmeet.util.ResponseEntityUtils;
@@ -25,5 +26,10 @@ public class RoomController implements RoomsApi {
     public CompletableFuture<ResponseEntity<RoomDTO>> getRoom(Long id) {
         //        return supplyAsync(() -> ResponseEntity.ok(roomService.getRoom(id)));
         return supplyAsync(() -> roomService.getRoom(id), controllerExecutor).thenApply(ResponseEntityUtils::ok);
+    }
+
+    @Override
+    public CompletableFuture<ResponseEntity<RoomDTO>> createRoom(CreateRoomDTO createRoomDTO) {
+        return supplyAsync(() -> roomService.createRoom(createRoomDTO), controllerExecutor).thenApply(ResponseEntityUtils::created);
     }
 }
