# service/src/main/java/br/com/sw2you/realmeet/validator/RoomValidator.java
@@ -1,0 +1,12 @@
+package br.com.sw2you.realmeet.validator;
+
+import br.com.sw2you.realmeet.api.model.CreateRoomDTO;
+import org.springframework.stereotype.Component;
+
+@Component
+public class RoomValidator {
+
+    public void validate(CreateRoomDTO createRoomDTO) {
+
+    }
+}
