# service/src/main/resources/api.yml
@@ -32,18 +32,47 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ResponseError'
+  /rooms:
+    post:
+      summary: 'Creates a room'
+      operationId: createRoom
+      tags:
+        - room
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateRoomDTO'
+        required: true
+      responses:
+        201:
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RoomDTO'
+        422:
+          $ref: '#/components/responses/UnprocessableEntity'
 components:
   schemas:
-    RoomDTO:
+    CreateRoomDTO:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
         name:
           type: string
         seats:
           type: integer
+
+    RoomDTO:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/CreateRoomDTO'
+        - type: object
+          properties:
+            id:
+              type: integer
+              format: int64
+
     ResponseError:
       type: object
       required:
@@ -57,6 +86,10 @@ components:
           type: string
         message:
           type: string
+  responses:
+    UnprocessableEntity:
+      description: The server understands the content type of the request entity
+        was unable to process the contained instructions.
   securitySchemes:
     BasicAuth:
       type: http
